# SIMD_ML_Library

./: .gitignore  CMakeLists.txt  README.md  benchmark.md
.github/workflows/: cmake-single-platform.yml
example/: train_xor.cpp
src/: activation.ispc  backprop.ispc  benchmark.cpp  linear.ispc  loss.ispc  model.cpp  model.h  run_model.cpp  weight_io.cpp  weight_io.h
tests/: CMakeLists.txt  test_activation.cpp  test_backprop.cpp  test_linear.cpp  test_loss.cpp  test_model.cpp  test_weight_io.cpp
